@@ -1,6 +1,9 @@
 Revision history for Perl extension Math::Polynomial::Solve.
 
 2.61_1
+     Oct 30 2011
+	- A couple more changes to Build.PL (dist_author and resources).
+	  Time to push this up to git and add it to CPAN.
      Sep 20 2011
 	- CPAN::Meta::Spec had a lot to say about the changes to Build.PL
 	  scripts. Made those changes.
